--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/NewMap.NewMap
 GlobalDefaultGameMode=/Game/Blueprints/BP_TetrisGM.BP_TetrisGM_C
+EditorStartupMap=/Game/Levels/NewMap.NewMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
