--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,7 +323,7 @@ TakeRecorderMicrophoneAudioManager=GameMapsSettings.DefaultModes.SelectedGameMod
 MovieSceneAnimationTrackRecorderEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 TakeRecorderWorldSourceSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 InstancedStaticMeshComponent=InstancedStaticMeshComponent.TransformCommon.Transform,InstancedStaticMeshComponent.Physics.ConstraintsGroup
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.FallInterval
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 BP_Piece3D_C=PropertyWrapper.DefaultValueCategory.FallInterval
 EdGraph=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
@@ -351,28 +351,28 @@ GameSession=PropertyWrapper.DefaultValueCategory.FallInterval
 CameraComponent=PropertyWrapper.DefaultValueCategory.FallInterval
 HierarchicalInstancedStaticMeshComponent=PropertyWrapper.DefaultValueCategory.FallInterval
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.FallInterval
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Rotate.IA_Rotate,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveY.IA_MoveY
+InputMappingContext=InputMappingContext.Mappings.ActionMappings
 InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Rotate.IA_Rotate,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveY.IA_MoveY
 
 [EditorStartup]
 LastLevel=/Game/Levels/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
 OpenAssetsAtExit=/Game/Blueprints/BP_CameraPawn.BP_CameraPawn
+OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
+OpenAssetsAtExit=/Game/Blueprints/BP_Piece3D.BP_Piece3D
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -412,11 +412,11 @@ AssetDialog.ZoomScale=0
 AssetDialog.ListViewColumnsManuallyChangedOnce=False
 AssetDialog.ColumnViewColumnsManuallyChangedOnce=False
 AssetDialog.ListHiddenColumns=Class
+ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Level
 ContentBrowserDrawer.JumpMRU=/All/EngineData
@@ -1052,6 +1052,7 @@ InputAction.Description=True
 InputAction.Action=True
 InputAction.Input Consumption=True
 InputAction.User Settings=True
+InterchangeFbxSettings.FBX =True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1081,22 +1082,21 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Level/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Levels/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Input/IMC_Tetris1
+MRUItem0=/Game/Blueprints/BP_Piece3D
 MRUItem1=/Game/Input/IMC_Tetris
-MRUItem2=/Game/Blueprints/BP_CameraPawn
-MRUItem3=/Game/Input/IA_SoftDrop
-MRUItem4=/Game/Input/IA_MoveY
-MRUItem5=/Game/Input/IA_MoveX
-MRUItem6=/Game/Blueprints/ST_Cell
-MRUItem7=/Game/Levels/NewMap
-MRUItem8=/Game/Blueprints/BP_Board3D
+MRUItem2=/Game/Blueprints/BP_Board3D
+MRUItem3=/Game/Levels/NewMap
+MRUItem4=/Game/Blueprints/BP_CameraPawn
+MRUItem5=/Game/Input/IA_SoftDrop
+MRUItem6=/Game/Input/IA_MoveY
+MRUItem7=/Game/Input/IA_MoveX
+MRUItem8=/Game/Blueprints/ST_Cell
 MRUItem9=/Game/Blueprints/BP_Tetris3DGM
-MRUItem10=/Game/Blueprints/BP_Piece3D
 
 [DetailPropertyExpansion]
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-Object="\"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
+Object="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
 InstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -1106,8 +1106,8 @@ ActorComponent=
 BP_Piece3D_C="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 HierarchicalInstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
-DataAsset="\"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
