Add clear logic

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -360,6 +360,8 @@ LastLevel=/Game/Levels/NewMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -368,7 +370,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/Blueprints/BP_CameraPawn.BP_CameraPawn
 OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
@@ -387,7 +388,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Input
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Enums
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -412,11 +413,11 @@ AssetDialog.ZoomScale=0
 AssetDialog.ListViewColumnsManuallyChangedOnce=False
 AssetDialog.ColumnViewColumnsManuallyChangedOnce=False
 AssetDialog.ListHiddenColumns=Class
-ContentBrowserDrawer.JumpMRU=/All/Game/Levels
-ContentBrowserDrawer.JumpMRU=/All/Game/Input
-ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Input
+ContentBrowserDrawer.JumpMRU=/All/Game/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Level
 ContentBrowserDrawer.JumpMRU=/All/EngineData
@@ -1053,6 +1054,8 @@ InputAction.Action=True
 InputAction.Input Consumption=True
 InputAction.User Settings=True
 InterchangeFbxSettings.FBX =True
+UserDefinedEnum.Description=True
+UserDefinedEnum.Enumerators=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1082,21 +1085,22 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Level/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Levels/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_Piece3D
-MRUItem1=/Game/Input/IMC_Tetris
-MRUItem2=/Game/Blueprints/BP_Board3D
-MRUItem3=/Game/Levels/NewMap
-MRUItem4=/Game/Blueprints/BP_CameraPawn
-MRUItem5=/Game/Input/IA_SoftDrop
-MRUItem6=/Game/Input/IA_MoveY
-MRUItem7=/Game/Input/IA_MoveX
-MRUItem8=/Game/Blueprints/ST_Cell
-MRUItem9=/Game/Blueprints/BP_Tetris3DGM
+MRUItem0=/Game/Blueprints/Enums/Axis
+MRUItem1=/Game/Blueprints/Structs/ST_Cell
+MRUItem2=/Game/Blueprints/BP_Piece3D
+MRUItem3=/Game/Input/IMC_Tetris
+MRUItem4=/Game/Blueprints/BP_Board3D
+MRUItem5=/Game/Levels/NewMap
+MRUItem6=/Game/Blueprints/BP_CameraPawn
+MRUItem7=/Game/Input/IA_SoftDrop
+MRUItem8=/Game/Input/IA_MoveY
+MRUItem9=/Game/Input/IA_MoveX
+MRUItem10=/Game/Blueprints/BP_Tetris3DGM
 
 [DetailPropertyExpansion]
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
-Object="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
+Object=
 InstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -1119,6 +1123,7 @@ GameplayTagsSettings=True
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultMaps=False
 PropertyWrapper.Variable=False
+UserDefinedEnum.Enumerators=False
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_Board3D.BP_Board3D=0
@@ -1132,6 +1137,7 @@ PropertyWrapper.Variable=False
 /Game/Input/IMC_Tetris.IMC_Tetris=0
 /Game/Input/IA_SoftDrop.IA_SoftDrop=1
 /Game/Input/IMC_Tetris1.IMC_Tetris1=1
+/Game/Blueprints/Enums/Axis.Axis=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2617,4 +2623,11 @@ RecentlyPlaced=/Game/Blueprints/BP_Board3D.BP_Board3D;
 
 [MessageLog]
 LastLogListing=AssetCheck
+
+[ColorThemes]
+Theme0=New Theme
+
+[RecentColors]
+Color0=(R=0.971227,G=1.000000,B=1.000000,A=1.000000)
+Color1=(R=124.949203,G=1.000000,B=1.000000,A=1.000000)
 
