Fix clearing layer

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -362,6 +362,7 @@ SpawnNewPiece=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F
 SpawnNewPiece_0=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 GM_Tetris3D_C=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 K2Node=
+TryClearLayers=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 
 [EditorStartup]
 LastLevel=/Game/Levels/NewMap
@@ -381,7 +382,7 @@ RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/Blueprints/Banished/BP_GameManager.BP_GameManager
+OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
 OpenAssetsAtExit=/Game/Blueprints/GM_Tetris3D.GM_Tetris3D
 OpenAssetsAtExit=/Game/Blueprints/BP_CameraPawn.BP_CameraPawn
 
@@ -1089,6 +1090,7 @@ GM_Tetris3D_C.GameMode=True
 GM_Tetris3D_C.Game=True
 GM_Tetris3D_C.Physics=True
 GM_Tetris3D_C.Events=True
+GM_Tetris3D_C.Default=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1118,10 +1120,10 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Level/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Levels/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Banished/BP_GameManager
-MRUItem1=/Game/Blueprints/BP_CameraPawn
+MRUItem0=/Game/Blueprints/BP_CameraPawn
+MRUItem1=/Game/Blueprints/GM_Tetris3D
 MRUItem2=/Game/Blueprints/BP_Board3D
-MRUItem3=/Game/Blueprints/GM_Tetris3D
+MRUItem3=/Game/Blueprints/Banished/BP_GameManager
 MRUItem4=/Game/Blueprints/BP_Piece3D
 MRUItem5=/Game/Blueprints/Enums/Axis
 MRUItem6=/Game/Blueprints/Structs/ST_Cell
@@ -1177,6 +1179,7 @@ MulticastInlineDelegatePropertyWrapper.Variable=False
 /Game/Blueprints/Enums/Axis.Axis=1
 /Game/Blueprints/BP_GameManager.BP_GameManager=0
 /Game/Blueprints/GM_Tetris3D.GM_Tetris3D=0
+/Game/Blueprints/Banished/BP_GameManager.BP_GameManager=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
