Add rotate logic

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -335,7 +335,7 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.I
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 SceneComponent=
 PlayerStart=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
+CapsuleComponent=
 WorldDataLayers=PropertyWrapper.DefaultValueCategory.FallInterval
 GameStateBase=PropertyWrapper.DefaultValueCategory.FallInterval
 BillboardComponent=PropertyWrapper.DefaultValueCategory.FallInterval
@@ -351,8 +351,8 @@ GameSession=PropertyWrapper.DefaultValueCategory.FallInterval
 CameraComponent=PropertyWrapper.DefaultValueCategory.FallInterval,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Lens|Exposure,CameraComponent.PostProcess.Lens|ExposureAdvanced
 HierarchicalInstancedStaticMeshComponent=PropertyWrapper.DefaultValueCategory.FallInterval
 K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.FallInterval
-InputMappingContext=InputMappingContext.Mappings.ActionMappings
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Rotate.IA_Rotate,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveY.IA_MoveY
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Rotate.IA_Rotate,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_RotateX.IA_RotateX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_RotateY.IA_RotateY,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_RotateZ.IA_RotateZ,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveY.IA_MoveY
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_Rotate.IA_Rotate,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_RotateX.IA_RotateX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_RotateY.IA_RotateY,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveX.IA_MoveX,InputMappingContext.Mappings.ActionMappings./Game/Input/IA_MoveY.IA_MoveY
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 ClearFullLayers=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 ClearFullLayers_0=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
@@ -363,6 +363,8 @@ SpawnNewPiece_0=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs
 GM_Tetris3D_C=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 K2Node=
 TryClearLayers=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
+TryRotate=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
+TryRotate_0=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 
 [EditorStartup]
 LastLevel=/Game/Levels/NewMap
@@ -370,6 +372,8 @@ LastLevel=/Game/Levels/NewMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -377,7 +381,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -385,6 +388,7 @@ RecentAssetEditors=GenericAssetEditor
 OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
 OpenAssetsAtExit=/Game/Blueprints/GM_Tetris3D.GM_Tetris3D
 OpenAssetsAtExit=/Game/Blueprints/BP_CameraPawn.BP_CameraPawn
+OpenAssetsAtExit=/Game/Blueprints/BP_Piece3D.BP_Piece3D
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -399,7 +403,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Input
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -424,12 +428,12 @@ AssetDialog.ZoomScale=0
 AssetDialog.ListViewColumnsManuallyChangedOnce=False
 AssetDialog.ColumnViewColumnsManuallyChangedOnce=False
 AssetDialog.ListHiddenColumns=Class
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Structs
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Enums
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Level
@@ -1091,6 +1095,7 @@ GM_Tetris3D_C.Game=True
 GM_Tetris3D_C.Physics=True
 GM_Tetris3D_C.Events=True
 GM_Tetris3D_C.Default=True
+K2Node_SwitchInteger.PinOptions=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1120,18 +1125,19 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Level/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Levels/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/BP_CameraPawn
-MRUItem1=/Game/Blueprints/GM_Tetris3D
-MRUItem2=/Game/Blueprints/BP_Board3D
-MRUItem3=/Game/Blueprints/Banished/BP_GameManager
-MRUItem4=/Game/Blueprints/BP_Piece3D
-MRUItem5=/Game/Blueprints/Enums/Axis
-MRUItem6=/Game/Blueprints/Structs/ST_Cell
-MRUItem7=/Game/Input/IMC_Tetris
-MRUItem8=/Game/Levels/NewMap
-MRUItem9=/Game/Input/IA_SoftDrop
-MRUItem10=/Game/Input/IA_MoveY
-MRUItem11=/Game/Input/IA_MoveX
+MRUItem0=/Game/Input/IMC_Tetris
+MRUItem1=/Game/Input/IA_RotateX
+MRUItem2=/Game/Blueprints/BP_Piece3D
+MRUItem3=/Game/Blueprints/BP_CameraPawn
+MRUItem4=/Game/Blueprints/GM_Tetris3D
+MRUItem5=/Game/Blueprints/BP_Board3D
+MRUItem6=/Game/Blueprints/Banished/BP_GameManager
+MRUItem7=/Game/Blueprints/Enums/Axis
+MRUItem8=/Game/Blueprints/Structs/ST_Cell
+MRUItem9=/Game/Levels/NewMap
+MRUItem10=/Game/Input/IA_SoftDrop
+MRUItem11=/Game/Input/IA_MoveY
+MRUItem12=/Game/Input/IA_MoveX
 
 [DetailPropertyExpansion]
 MassSettings="\"Object.Mass\" "
@@ -1146,8 +1152,8 @@ ActorComponent=
 BP_Piece3D_C="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 HierarchicalInstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
-DataAsset="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[0].Triggers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[8]\" "
 BP_GameManager_C=
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
 
@@ -1180,6 +1186,7 @@ MulticastInlineDelegatePropertyWrapper.Variable=False
 /Game/Blueprints/BP_GameManager.BP_GameManager=0
 /Game/Blueprints/GM_Tetris3D.GM_Tetris3D=0
 /Game/Blueprints/Banished/BP_GameManager.BP_GameManager=0
+/Game/Input/IA_Rotate.IA_Rotate=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1204,8 +1211,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
