--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -177,6 +177,10 @@ MRUItem1=/Game/Level/NewMap
 MRUItem2=/Game/NewMap
 MRUItem3=/Game/NewWorld
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
@@ -335,7 +339,7 @@ K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.I
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
 SceneComponent=
 PlayerStart=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46B74534C9BF8A4C377A694C2E961FD
+CapsuleComponent=
 WorldDataLayers=PropertyWrapper.DefaultValueCategory.FallInterval
 GameStateBase=PropertyWrapper.DefaultValueCategory.FallInterval
 BillboardComponent=PropertyWrapper.DefaultValueCategory.FallInterval
@@ -370,8 +374,11 @@ TryRotate_0=PropertyWrapper.DefaultValueCategory.FallInterval,EdGraph.Inputs.F46
 LastLevel=/Game/Levels/NewMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -385,6 +392,9 @@ RecentAssetEditors=
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
+OpenAssetsAtExit=/Game/Blueprints/BP_Board3D.BP_Board3D
+OpenAssetsAtExit=/Game/Blueprints/BP_CameraPawn.BP_CameraPawn
+OpenAssetsAtExit=/Game/Blueprints/GM_Tetris3D.GM_Tetris3D
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -399,7 +409,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize2=1
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Game/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -424,12 +434,13 @@ AssetDialog.ZoomScale=0
 AssetDialog.ListViewColumnsManuallyChangedOnce=False
 AssetDialog.ColumnViewColumnsManuallyChangedOnce=False
 AssetDialog.ListHiddenColumns=Class
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/Levels
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Structs
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Enums
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/NewFolder
 ContentBrowserDrawer.JumpMRU=/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Level
@@ -1094,6 +1105,47 @@ GM_Tetris3D_C.Default=True
 K2Node_SwitchInteger.PinOptions=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.WorldPositionOffset=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+PreviewMaterial.Substrate=True
+PreviewMaterial.LightFunctionMaterial=True
+PreviewMaterial.VirtualTexture=True
+PreviewMaterial.PixelDepthOffset=True
+DirectionalLight.Actor=True
+DirectionalLight.Networking=True
+DirectionalLight.Physics=True
+DirectionalLight.Performance=True
+DirectionalLight.Cooking=True
+DirectionalLight.Tags=True
+DirectionalLight.LightFunction=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.RayTracing=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.LightShafts=True
+DirectionalLight.Lightmass=True
+DirectionalLight.HLOD=True
+DirectionalLight.Rendering=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1123,19 +1175,22 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Level/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))),("/Game/Levels/NewMap.NewMap", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/GM_Tetris3D
-MRUItem1=/Game/Blueprints/BP_Piece3D
-MRUItem2=/Game/Blueprints/BP_CameraPawn
-MRUItem3=/Game/Blueprints/BP_Board3D
-MRUItem4=/Game/Input/IMC_Tetris
-MRUItem5=/Game/Input/IA_RotateX
-MRUItem6=/Game/Blueprints/Banished/BP_GameManager
-MRUItem7=/Game/Blueprints/Enums/Axis
-MRUItem8=/Game/Blueprints/Structs/ST_Cell
-MRUItem9=/Game/Levels/NewMap
-MRUItem10=/Game/Input/IA_SoftDrop
-MRUItem11=/Game/Input/IA_MoveY
-MRUItem12=/Game/Input/IA_MoveX
+MRUItem0=/Game/Materials/RedMat
+MRUItem1=/Game/Materials/BlueMat
+MRUItem2=/Game/Materials/GreenMat
+MRUItem3=/Game/Blueprints/GM_Tetris3D
+MRUItem4=/Game/Blueprints/BP_CameraPawn
+MRUItem5=/Game/Blueprints/BP_Board3D
+MRUItem6=/Game/Blueprints/BP_Piece3D
+MRUItem7=/Game/Input/IMC_Tetris
+MRUItem8=/Game/Input/IA_RotateX
+MRUItem9=/Game/Blueprints/Banished/BP_GameManager
+MRUItem10=/Game/Blueprints/Enums/Axis
+MRUItem11=/Game/Blueprints/Structs/ST_Cell
+MRUItem12=/Game/Levels/NewMap
+MRUItem13=/Game/Input/IA_SoftDrop
+MRUItem14=/Game/Input/IA_MoveY
+MRUItem15=/Game/Input/IA_MoveX
 
 [DetailPropertyExpansion]
 MassSettings="\"Object.Mass\" "
@@ -1145,8 +1200,8 @@ InstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lig
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
-SceneComponent="\"Object.PostProcess.PostProcessSettings\" "
-ActorComponent="\"Object.PostProcess.PostProcessSettings\" "
+SceneComponent=
+ActorComponent=
 BP_Piece3D_C="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 HierarchicalInstancedStaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -1185,6 +1240,9 @@ MulticastInlineDelegatePropertyWrapper.Variable=False
 /Game/Blueprints/GM_Tetris3D.GM_Tetris3D=0
 /Game/Blueprints/Banished/BP_GameManager.BP_GameManager=0
 /Game/Input/IA_Rotate.IA_Rotate=1
+/Game/Materials/RedMat.RedMat=0
+/Game/Materials/BlueMat.BlueMat=0
+/Game/Materials/GreenMat.GreenMat=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2664,6 +2722,10 @@ RecentsFiles=E:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Animation/Control
 RecentsFiles=E:/Program Files/Epic Games/UE_5.6/Engine/Plugins/Importers/USDImporter/Content/Python/init_unreal.py
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/BlueMat.BlueMat;
+RecentlyPlaced=/Game/Materials/GreenMat.GreenMat;
+RecentlyPlaced=/Game/Materials/RedMat.RedMat;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/BP_GameManager.BP_GameManager;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/BP_Piece3D.BP_Piece3D;
@@ -2676,11 +2738,187 @@ LastLogListing=AssetCheck
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=0.971227,G=1.000000,B=1.000000,A=1.000000)
-Color1=(R=124.949203,G=1.000000,B=1.000000,A=1.000000)
+Color0=(R=346.972717,G=0.984848,B=0.500000,A=1.000000)
+Color1=(R=228.912079,G=0.989781,B=0.500000,A=1.000000)
+Color2=(R=242.133301,G=0.876094,B=0.500000,A=1.000000)
+Color3=(R=128.946030,G=0.781114,B=0.500000,A=1.000000)
+Color4=(R=224.553726,G=0.907952,B=0.500000,A=1.000000)
+Color5=(R=3.978924,G=1.000000,B=0.500000,A=1.000000)
+Color6=(R=145.894165,G=0.535023,B=0.500000,A=1.000000)
+Color7=(R=169.371460,G=1.000000,B=0.500000,A=1.000000)
+Color8=(R=124.949203,G=1.000000,B=1.000000,A=1.000000)
+Color9=(R=0.971227,G=1.000000,B=1.000000,A=1.000000)
 
 [SuppressableDialogs]
 DeleteConfirmationFunction_Warning=False
 DeleteConfirmationVariable_Warning=False
 ChangeVariableType_Warning=False
+
+[SelectionDetails]
+PreserveScaleRatio=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=1
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+MaterialStatsDerivedMIOption=Ignore
 
